--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,10 @@ repositories {
 dependencies {
 	compile('org.springframework.cloud:spring-cloud-starter-stream-rabbit')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
+	compile('org.mariadb.jdbc:mariadb-java-client:1.5.2')
+	
+	compile project(':lora-database-api')
+	
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
